Add accessibilityPrivate.sendSyntheticKeyEvent

Bug: 796861
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I54973fff39522225398d490877c2d03690dfd71f